feat: v1.1 — unified model, streaming, new tools, jtokkit, permissions
P0 — Architecture:
- Unified Message model: claw-provider uses claw-core types directly
  (eliminated ProviderRequest.Message/ToolCall duplicates)
- AgentLoop now accepts typed LoopResponse instead of JSON string
  (no more ProviderResponse → JSON → parseResponse round-trip)
- Streaming support: AgentLoop → ClawRepl real-time token rendering

P1 — Quality:
- Fixed ToolDef schema double-wrapping in Anthropic provider
- workingDirectory() added to Tool interface, all file tools follow it
- PermissionManager wired into AgentLoop (NONE/ASK/ALLOW_ALL)

P2 — Features:
- EditTool: exact string replacement
- WebFetchTool: HTTP fetch with HTML stripping
- FindTool: glob-based file search
- TokenCounter: jtokkit CL100K_BASE with char/4 fallback
- Conversation.estimateTokens() uses TokenCounter

Files: 17 modified, 4 new